# codechecker_bazel

./: .HOW_TO  .bazelignore  .gitignore  .pylintrc  BUILD  CONTRIBUTING.md  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  build-and-run-docker.sh  flake.nix  noxfile.py  pytest.ini  redhat.sh  requirements.txt
.ci/mise/: README.md  config.toml  init.sh  run.sh
.ci/nox/: dev.yaml  install.sh
.github/: bazel_version.json  foss_project_collector.py  foss_project_collector.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  Task.yaml
.github/actions/env_setup/: action.yml
.github/actions/ubuntu_setup/: action.yaml  action.yml
.github/buildbarn/: .bazelrc.template  cleanup.sh  docker-compose.yml  setup.sh
.github/buildbarn/config/: common.libsonnet
.github/buildbarn/runner-img/: Dockerfile
.github/platform_environment_setup/rhel9/: action.yaml
.github/platform_environment_setup/ubuntu/: action.yaml
.github/workflows/: Dockerfile  buildbarn.yaml  ci.yml  foss.yaml  foss.yml  install-deps.sh  lint.yaml  micromamba.yaml  mise.yaml  nox.yaml  patch-test-proj.sh  patch-yaml-cpp.sh  rhel.yml  small_test.yml  test.yml  ubuntu.yml  unit_test.yaml  unit_test.yml
.github/workflows/patches/: patch-yaml-cpp.sh  (+1 more)
.mise/: README.md  config.toml  init.sh  print-env.sh
actions/env_setup/: action.yml
dependency/: buildifier.sh
redhat/: Dockerfile
src/: BUILD  clang.bzl  clang_ctu.bzl  code_checker.bzl  code_checker_script.py  codechecker.bzl  codechecker_config.bzl  codechecker_script.py  common.bzl  compile_commands.bzl  compile_commands_filter.py  extensions.bzl  metadata_merge.py  per_file.bzl  per_file_script.py  per_file_test.bzl  resolve_script.py  symlink_map.py  tools.bzl
test/: BUILD  README.md  foss_test.py  foss_test.sh  test.py  test.sh  test_all_bazel_versions.py  test_foss.sh  test_runner.py
test/common/: base.py  codechecker_server.py  tmpfile.py
test/foss/: README.md  pytest.ini  test_foss.py
test/unit/: __init__.py  test_template.py
(+79 files in other folders)
